--- a/app/src/main/res/layout/activity_kalkulator.xml
+++ b/app/src/main/res/layout/activity_kalkulator.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".view.kalkulator.KalkulatorActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -81,6 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Recognize Text"
+                style="@style/firstbutton"
                 android:textAllCaps="false"
                 app:layout_constraintTop_toBottomOf="@id/camera_layout"
                 app:layout_constraintStart_toStartOf="parent"
@@ -169,6 +171,7 @@
                 android:layout_height="wrap_content"
                 android:text="Recognize Text"
                 android:textAllCaps="false"
+                style="@style/firstbutton"
                 app:layout_constraintTop_toBottomOf="@id/camera_layout"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
