--- a/app/src/main/res/layout/activity_kalkulator.xml
+++ b/app/src/main/res/layout/activity_kalkulator.xml
@@ -11,14 +11,50 @@
         android:id="@+id/wrap"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginHorizontal="5dp">
+        android:paddingBottom="20dp">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolba"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/black"
+            android:gravity="center_vertical"
+            app:layout_constraintTop_toTopOf="@+id/wrap"
+            app:layout_constraintStart_toStartOf="@+id/wrap"
+            app:layout_constraintEnd_toEndOf="@+id/wrap">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="start">
+
+                <ImageView
+                    android:id="@+id/ivBack"
+                    android:layout_width="25dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/baseline_arrow_back_24"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Kalkulator"
+                    android:layout_marginStart="5dp"
+                    android:fontFamily="@font/dm_sans_bold"
+                    android:gravity="center_vertical"
+                    android:textSize="18sp"/>
+
+
+            </LinearLayout>
+
+        </androidx.appcompat.widget.Toolbar>
 
         <LinearLayout
             android:id="@+id/firstNumb"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintTop_toTopOf="@+id/wrap"
+            app:layout_constraintTop_toBottomOf="@+id/toolba"
             app:layout_constraintStart_toStartOf="@+id/wrap"
             app:layout_constraintEnd_toEndOf="@+id/wrap">
 
@@ -88,16 +124,19 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
-            <EditText
+            <TextView
                 android:id="@+id/ocrResultEt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/processImageBtn"
                 android:background="@android:color/transparent"
                 android:gravity="top"
+                android:textSize="18sp"
+                android:fontFamily="@font/dm_sans"
+                android:textColor="@color/black"
                 android:inputType="textMultiLine"
                 android:padding="10dp"
-                android:hint="Detected text will appear here."/>
+                tools:ignore="TextViewEdits" />
 
         </LinearLayout>
 
@@ -176,22 +215,100 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
-            <EditText
+            <TextView
                 android:id="@+id/ocrResultEtSechond"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/processImageBtn"
                 android:background="@android:color/transparent"
                 android:gravity="top"
+                android:textSize="18sp"
+                android:fontFamily="@font/dm_sans"
+                android:textColor="@color/black"
                 android:inputType="textMultiLine"
-                android:padding="10dp"
-                android:hint="Detected text will appear here."/>
+                android:padding="10dp"/>
 
         </LinearLayout>
 
+        <RadioGroup
+            android:id="@+id/rgMetode"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/sechondNumb"
+            app:layout_constraintStart_toStartOf="@+id/wrap"
+            app:layout_constraintEnd_toEndOf="@+id/wrap">
 
+            <RadioButton
+                android:id="@+id/rbKali"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Dikali"
+                android:hint="*"
+                android:textSize="12sp"
+                android:fontFamily="@font/dm_sans"
+                android:textColor="@color/black"/>
+
+            <RadioButton
+                android:id="@+id/rbBagi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:text="Dibagi"
+                android:hint="/"
+                android:textSize="12sp"
+                android:fontFamily="@font/dm_sans"
+                android:textColor="@color/black"/>
+
+            <RadioButton
+                android:id="@+id/rbTambah"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:text="Tambah"
+                android:hint="+"
+                android:textSize="12sp"
+                android:fontFamily="@font/dm_sans"
+                android:textColor="@color/black"/>
+
+            <RadioButton
+                android:id="@+id/rbKurang"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:text="Kurang"
+                android:hint="-"
+                android:textSize="12sp"
+                android:fontFamily="@font/dm_sans"
+                android:textColor="@color/black"/>
+
+        </RadioGroup>
+
+        <TextView
+            android:id="@+id/tvHasil"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Hasil"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="@color/black"
+            android:fontFamily="@font/dm_sans"
+            app:layout_constraintTop_toBottomOf="@+id/rgMetode"
+            app:layout_constraintStart_toStartOf="@+id/wrap"
+            app:layout_constraintEnd_toEndOf="@+id/wrap"
+            android:layout_marginVertical="10dp"/>
+
+        <Button
+            android:id="@+id/btnHistory"
+            style="@style/sechondbutton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Save History"
+            android:textAllCaps="false"
+            app:layout_constraintTop_toBottomOf="@+id/tvHasil"
+            app:layout_constraintStart_toStartOf="@+id/wrap"
+            app:layout_constraintEnd_toEndOf="@+id/wrap"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </ScrollView>
