--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.AssigmentAndroid." parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.AssigmentAndroid." parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/teal_200</item>
@@ -17,6 +17,15 @@
     <!--Button-->
     <style name="firstbutton">
         <item name="backgroundTint">@color/teal_200</item>
+        <item name="android:textSize">15sp</item>
+        <item name="cornerRadius">15dp</item>
+        <item name="android:state_pressed">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
+    <style name="sechondbutton">
+        <item name="backgroundTint">@color/black</item>
         <item name="android:textSize">15sp</item>
         <item name="cornerRadius">15dp</item>
         <item name="android:state_pressed">false</item>
