--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,6 @@
     android:background="@color/white"
     tools:context=".view.home.HomeActivity">
 
-
     <LinearLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
@@ -40,7 +39,7 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
-        android:id="@+id/tvUsernam"
+        android:id="@+id/tvUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Selamat Datang "
@@ -78,8 +77,8 @@
         android:layout_height="wrap_content"
         android:text="History "
         android:textSize="23sp"
+        android:textStyle="bold"
         android:textColor="@color/black"
-        android:fontFamily="@font/dm_sans_bold"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/header"
@@ -88,7 +87,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvHistory"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="380dp"
+        android:layout_marginVertical="15dp"
         app:layout_constraintTop_toBottomOf="@+id/tvHistory"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
