--- a/app/src/main/res/layout/activity_kalkulator.xml
+++ b/app/src/main/res/layout/activity_kalkulator.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/black_four"
     tools:context=".view.kalkulator.KalkulatorActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/wrap"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:paddingBottom="20dp">
 
         <androidx.appcompat.widget.Toolbar
@@ -49,6 +49,7 @@
 
         </androidx.appcompat.widget.Toolbar>
 
+
         <LinearLayout
             android:id="@+id/firstNumb"
             android:layout_width="match_parent"
@@ -66,6 +67,7 @@
                 android:src="@drawable/twotone_add_to_photos_24"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:id="@+id/image"
+                android:background="@color/grey"
                 android:scaleType="fitXY"
                 android:adjustViewBounds="true" />
 
@@ -73,7 +75,7 @@
                 android:id="@+id/camera_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/image"
+                app:layout_constraintTop_toBottomOf="@+id/guideline1"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 android:paddingStart="10dp"
@@ -115,7 +117,7 @@
             <Button
                 android:id="@+id/processImageBtn"
                 android:layout_weight="1"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Recognize Text"
                 style="@style/firstbutton"
@@ -124,19 +126,43 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
-            <TextView
-                android:id="@+id/ocrResultEt"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/processImageBtn"
-                android:background="@android:color/transparent"
-                android:gravity="top"
-                android:textSize="18sp"
-                android:fontFamily="@font/dm_sans"
-                android:textColor="@color/black"
-                android:inputType="textMultiLine"
-                android:padding="10dp"
-                tools:ignore="TextViewEdits" />
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/ocrResultEtTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/processImageBtn"
+                    android:background="@android:color/transparent"
+                    android:gravity="top"
+                    android:textSize="18sp"
+                    android:text="Nilai Pertama :"
+                    android:fontFamily="@font/dm_sans"
+                    android:textColor="@color/black"
+                    android:inputType="textMultiLine"
+                    android:padding="10dp"
+                    tools:ignore="TextViewEdits" />
+
+                <TextView
+                    android:id="@+id/ocrResultEt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/processImageBtn"
+                    android:gravity="top"
+                    android:textSize="18sp"
+                    android:text="0"
+                    android:fontFamily="@font/dm_sans"
+                    android:textColor="@color/black"
+                    android:inputType="textMultiLine"
+                    android:padding="10dp"
+                    tools:ignore="TextViewEdits" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -149,64 +175,10 @@
             app:layout_constraintStart_toStartOf="@+id/wrap"
             app:layout_constraintEnd_toEndOf="@+id/wrap">
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:src="@drawable/twotone_add_to_photos_24"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:id="@+id/imageSechond"
-                android:scaleType="fitXY"
-                android:adjustViewBounds="true" />
-
-            <LinearLayout
-                android:id="@+id/camera_layout_Sechond"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/image"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:paddingStart="10dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/cancelSechond"
-                    android:src="@drawable/ic_round_cancel_24"
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:layout_margin="10dp"
-                    android:visibility="gone"/>
-
-
-                <ImageView
-                    android:id="@+id/cameraSechond"
-                    android:src="@drawable/ic_round_photo_camera_24"
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:layout_margin="10dp"/>
-
-                <ImageView
-                    android:id="@+id/gallerySechond"
-                    android:src="@drawable/ic_round_collections_24"
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:layout_margin="10dp"/>
-
-                <ImageView
-                    android:id="@+id/saveSechond"
-                    android:src="@drawable/ic_round_save_24"
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:layout_margin="10dp"
-                    android:visibility="gone"/>
-
-            </LinearLayout>
-
             <Button
                 android:id="@+id/processImageBtnSechond"
                 android:layout_weight="1"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Recognize Text"
                 android:textAllCaps="false"
@@ -215,18 +187,42 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
-            <TextView
-                android:id="@+id/ocrResultEtSechond"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/processImageBtn"
-                android:background="@android:color/transparent"
-                android:gravity="top"
-                android:textSize="18sp"
-                android:fontFamily="@font/dm_sans"
-                android:textColor="@color/black"
-                android:inputType="textMultiLine"
-                android:padding="10dp"/>
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/ocrResultEtSechondTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/processImageBtn"
+                    android:background="@android:color/transparent"
+                    android:gravity="top"
+                    android:textSize="18sp"
+                    android:text="Nilai Kedua :"
+                    android:fontFamily="@font/dm_sans"
+                    android:textColor="@color/black"
+                    android:inputType="textMultiLine"
+                    android:padding="10dp"
+                    tools:ignore="TextViewEdits" />
+
+                <TextView
+                    android:id="@+id/ocrResultEtSechond"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/processImageBtn"
+                    android:gravity="top"
+                    android:textSize="18sp"
+                    android:text="0"
+                    android:fontFamily="@font/dm_sans"
+                    android:textColor="@color/black"
+                    android:inputType="textMultiLine"
+                    android:padding="10dp"
+                    tools:ignore="TextViewEdits"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -292,7 +288,8 @@
             android:textAlignment="center"
             android:textAllCaps="false"
             android:textColor="@color/black"
-            android:fontFamily="@font/dm_sans"
+            android:textStyle="bold"
+            android:textSize="23sp"
             app:layout_constraintTop_toBottomOf="@+id/rgMetode"
             app:layout_constraintStart_toStartOf="@+id/wrap"
             app:layout_constraintEnd_toEndOf="@+id/wrap"
@@ -305,9 +302,17 @@
             android:layout_height="wrap_content"
             android:text="Save History"
             android:textAllCaps="false"
+            android:layout_marginVertical="15dp"
             app:layout_constraintTop_toBottomOf="@+id/tvHasil"
             app:layout_constraintStart_toStartOf="@+id/wrap"
             app:layout_constraintEnd_toEndOf="@+id/wrap"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="360dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
