--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="black">#2C2C2C</color>
     <color name="black_sechond">#535353</color>
     <color name="black_third">#696969</color>
+    <color name="black_four">#BDBCBC</color>
+    <color name="grey">#DFDEDE</color>
 </resources>
